--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mustache": "^4.2.0",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1"
   }
 }
